Wed Apr 22 13:18:56 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* _restclient.php,flaxclient.php: Some modifications to try and
	  some client redirecting, and to try and return the body on error.

Thu Apr  9 11:37:34 BST 2009    Tom Mortimer <tom@lemurconsulting.com>
    
    * php/flaxclient.php: Use 200/body instead of 201/Location. Accept
      numeric doc IDs.
    * php/_restclient.php: Removed 201/Location code.
    * php/unittests/test_docs.php: Got it working with server.

Wed Apr  8 16:47:46 BST 2009    Tom Mortimer <tom@lemurconsulting.com>

    * php/flaxclient.php: Don't construct a default REST client.
    * php/unittests/test_fields.php: Fixed assertions.
    * php/unittests/runtests.php: Can now test against real server.

Tue Mar 31 17:52:37 BST 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Added and fixed code for db document access.
    * _restclient.php: Added code to handle Location response header.
    * unittests/_testrestclient.php: Rewrote mock database as a class for better 
      clarity and easier reference semantics.
    * unittests/test_database.php: Added constructor for tests with real server.
    * unittests/test_fields.php: Added constructor for tests with real server.
    * unittests/runtests.php: Added code for tests with real server.
    * unittests/test_docs.php: Unit tests for database documents.

Wed Mar 18 17:43:26 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Changed API functions to be clearer about overwriting 
      resources.
    * unittests/_testrestclient.php, unittests/test_database.php, 
      unittests/test_fields.php: Updated tests for API changes.

Wed Mar 18 16:23:32 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * unittests/runtests.php: Allow individual test cases to be run.
    * flaxerrors.php: Added FlaxDocumentError class.

Wed Mar 18 13:51:11 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Fixed typo.